--- a/src/app/routes/Invoice/add-invoice/add-invoice.component.html
+++ b/src/app/routes/Invoice/add-invoice/add-invoice.component.html
@@ -19,7 +19,7 @@
       </mat-form-field>
      </div>
       <div>
-        <button mat-button (click)="onCancel()">Cancel</button>
+        <button mat-button color="warn" (click)="onCancel()">Cancel</button>
         <button mat-button (click)="onSubmit()" [disabled]="!InvoiceForm.valid">Submit</button>
     </div>
   </form>
