--- a/src/app/routes/adoption/adoption.component.html
+++ b/src/app/routes/adoption/adoption.component.html
@@ -23,7 +23,7 @@
               <img mat-card-image [src]="pet.imageUrl" alt="Pet image" />
               <mat-card-content>
                 <p>Breed: {{ pet.breed }}</p>
-                <p>Health Condition: {{ pet.petCondition }}</p>
+                <p>Condition: {{ pet.petCondition }}</p>
                 <p>Status: {{ pet.adoptionStatusId }}</p>
                 <p> Birth date: {{ pet.petBirthDate | date: 'dd MMM yyyy' }}</p>
                 <p>Gender: {{ pet.gender }}</p>
