--- a/src/app/routes/client-home/client-home.component.scss
+++ b/src/app/routes/client-home/client-home.component.scss
@@ -36,7 +36,8 @@
     }
 
     .subtitle {
-      color: #53186b;
+      color: black;
+      font-weight: bold;
       font-size: 20px; /* Slightly smaller font size for the subtitle */
       font-weight: normal; /* Regular weight for the subtitle */
       margin-bottom: 20px; /* Space between subtitle and button */
