--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <!-- Already Designed Items -->
     <div class="item item-1">
       <p class="greeting-text">
-        Welcome back, Doctor! <br />
+        Welcome back, {{username}} <br />
         Check your agenda to stay on track today.
       </p>
     </div>
