--- a/src/app/routes/dashboard/dashboard.component.scss
+++ b/src/app/routes/dashboard/dashboard.component.scss
@@ -141,7 +141,7 @@ ngx-charts-pie-chart {
       color: black;           // Ensure white text
       cursor: pointer;
       border-radius: 4px;
-      background: linear-gradient(110deg, rgba(43, 40, 235, 0.87), #fff);
+      background: linear-gradient(10deg, #fff, rgba(173, 216, 230, 0.7), rgba(43, 40, 235, 0.87));
       height: 30px;
       transition: transform 0.2s, box-shadow 0.2s;
 
