--- a/src/app/routes/horse/add-horse/add-horse.component.html
+++ b/src/app/routes/horse/add-horse/add-horse.component.html
@@ -103,7 +103,7 @@
 
 
         <div>
-          <button mat-button matStepperPrevious>Back</button>
+          <button mat-button color="warn" matStepperPrevious>Back</button>
           <button mat-button (click)="onSubmit()" [disabled]="!animalForm.valid">Submit</button>
         </div>
       </form>
