--- a/src/app/routes/pet/adding-pet/adding-pet.component.html
+++ b/src/app/routes/pet/adding-pet/adding-pet.component.html
@@ -42,7 +42,7 @@
               </mat-form-field>
 
               <div>
-                <button mat-button matStepperPrevious (click)="onCancel()">Cancel</button>
+                <button mat-button color="warn" matStepperPrevious (click)="onCancel()">Cancel</button>
                 <button mat-button matStepperNext [disabled]="!ownerForm.valid">Next</button>
               </div>
             </div>
@@ -108,7 +108,7 @@
             </div>
 
             <div>
-              <button mat-button matStepperPrevious>Back</button>
+              <button mat-button color="warn" matStepperPrevious>Back</button>
               <button mat-button (click)="onSubmit()" [disabled]="!animalForm.valid">Submit</button>
             </div>
           </form>
