--- a/src/app/routes/pet/edit-owner-dialog/edit-owner-dialog.component.html
+++ b/src/app/routes/pet/edit-owner-dialog/edit-owner-dialog.component.html
@@ -33,7 +33,7 @@
   </mat-card-content>
 
   <mat-card-actions align="end">
-    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button mat-button color="warn" (click)="onNoClick()">Cancel</button>
     <button mat-raised-button color="primary" (click)="saveChanges()" cdkFocusInitial>Save</button>
   </mat-card-actions>
 </mat-card>
