--- a/src/app/routes/pet/edit-pet-dialog/edit-pet-dialog.component.html
+++ b/src/app/routes/pet/edit-pet-dialog/edit-pet-dialog.component.html
@@ -35,6 +35,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
+  <button mat-button color="warn" (click)="onNoClick()">Cancel</button>
   <button mat-button (click)="saveChanges()" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
