--- a/src/app/routes/pet/edit-vaccine/edit-vaccine.component.html
+++ b/src/app/routes/pet/edit-vaccine/edit-vaccine.component.html
@@ -44,8 +44,8 @@
       </div>
 
       <div class="action-buttons">
-        <button mat-button (click)="onNoClick()">Cancel</button>
-        <button mat-button (click)="saveChanges()" [disabled]="!ownerForm.valid">Submit</button>
+        <button mat-button color="warn" (click)="onNoClick()">Cancel</button>
+        <button mat-button color="primary"(click)="saveChanges()" [disabled]="!ownerForm.valid">Submit</button>
       </div>
     </form>
   </mat-card-content>
