--- a/src/app/routes/adoption/add-pet-adoption/add-pet-adoption.component.html
+++ b/src/app/routes/adoption/add-pet-adoption/add-pet-adoption.component.html
@@ -43,7 +43,7 @@
         <input matInput type="number" [(ngModel)]="petdetails.weight" name="weight" required />
       </mat-form-field>
 
-      <input type="file" class="file-input"
+      <input type="file" class="file-input" id="fileInput"
        (change)="onFileSelected($event)" #fileUpload>
         <div class="file-upload">
            {{ "Upload Image Here"}}
@@ -54,8 +54,8 @@
         </div>
 
       <div>
-        <button mat-button type="button" (click)="onCancel()">Cancel</button>
-        <button mat-button type="submit"
+        <button mat-button color="warn" type="button" (click)="onCancel()">Cancel</button>
+        <button mat-button color="primary" type="submit"
         (click)="addPetWithImage()">Submit</button>
       </div>
     </div>
