--- a/src/app/routes/client-home/pet-for-adoption/pet-for-adoption.component.scss
+++ b/src/app/routes/client-home/pet-for-adoption/pet-for-adoption.component.scss
@@ -113,7 +113,7 @@
 
     h3 {
       font-size: 1.5rem;
-      color: #333; /* Sea Green */
+      color: #e2dbdb; /* Sea Green */
       margin-bottom: 1rem;
     }
 
@@ -125,7 +125,7 @@
 
       .day-time {
         font-size: 1rem;
-        color: #333;
+        color: #e2dbdb;
         text-align: center;
         margin: 0 0.5rem;
         flex: 1; /* Equal space for each day */
@@ -189,7 +189,7 @@
       flex: 1;
       text-align: right;
       font-size: 1rem;
-      color: #333;
+      color: #e2dbdb;
 
       a {
         text-decoration: none;
