--- a/src/app/routes/client-home/team-home/team-home.component.scss
+++ b/src/app/routes/client-home/team-home/team-home.component.scss
@@ -43,7 +43,7 @@
 
     h3 {
       font-size: 1.5rem;
-      color: #333; /* Sea Green */
+      color: #e2dbdb; /* Sea Green */
       margin-bottom: 1rem;
     }
 
@@ -55,7 +55,7 @@
 
       .day-time {
         font-size: 1rem;
-        color: #333;
+        color: #e2dbdb;
         text-align: center;
         margin: 0 0.5rem;
         flex: 1; /* Equal space for each day */
@@ -63,7 +63,7 @@
 
         span {
           font-size: 0.9rem;
-          color: #333;
+          color: #e2dbdb;
         }
       }
 
