--- a/src/app/routes/horse/horse.component.html
+++ b/src/app/routes/horse/horse.component.html
@@ -29,9 +29,9 @@
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="Species">
-    <th mat-header-cell *matHeaderCellDef class="tableheader"> Species </th>
-    <td mat-cell *matCellDef="let element"> {{element.species}} </td>
+  <ng-container matColumnDef="Breed">
+    <th mat-header-cell *matHeaderCellDef class="tableheader"> Breed </th>
+    <td mat-cell *matCellDef="let element"> {{element.breed}} </td>
   </ng-container>
 
   <!-- Actions Column -->
@@ -51,7 +51,7 @@
 <ng-container matColumnDef="addAppointment">
   <th mat-header-cell *matHeaderCellDef></th>
   <td mat-cell *matCellDef="let row">
-    <button (click)="openAddAppointmentDialog(row.animalId)" class="appointsbutton">
+    <button (click)="openAddAppointmentDialog(row.animalId)" class="buttonAdd">
       + Add Appoints
     </button>
   </td>
