--- a/src/app/routes/pet/adding-medical/adding-medical.component.html
+++ b/src/app/routes/pet/adding-medical/adding-medical.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="action-buttons">
-        <button mat-button (click)="onCancel()">Cancel</button>
+        <button mat-button color="warn" (click)="onCancel()">Cancel</button>
         <button mat-button (click)="onSubmit()" [disabled]="!ownerForm.valid">Submit</button>
       </div>
     </form>
