--- a/src/app/routes/pet/edit-medical/edit-medical.component.html
+++ b/src/app/routes/pet/edit-medical/edit-medical.component.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="action-buttons">
-        <button mat-button (click)="onNoClick()">Cancel</button>
+        <button mat-button color="warn" (click)="onNoClick()">Cancel</button>
         <button mat-button (click)="saveChanges()" [disabled]="!ownerForm.valid">Submit</button>
       </div>
     </form>
