--- a/src/app/routes/pet/pet.component.html
+++ b/src/app/routes/pet/pet.component.html
@@ -37,10 +37,6 @@
     <td mat-cell *matCellDef="let element"> {{element.breed}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="Species">
-    <th mat-header-cell *matHeaderCellDef class="tableheader"> Species </th>
-    <td mat-cell *matCellDef="let element"> {{element.species}} </td>
-  </ng-container>
 
 
   <!-- Actions Column -->
@@ -60,7 +56,7 @@
 <ng-container matColumnDef="addAppointment">
   <th mat-header-cell *matHeaderCellDef></th>
   <td mat-cell *matCellDef="let row">
-    <button (click)="openAddAppointmentDialog(row.animalId)" class="appointsbutton">
+    <button (click)="openAddAppointmentDialog(row.animalId)" class="buttonAdd">
       + Add Appoints
     </button>
   </td>
