--- a/src/app/routes/appointment/appointment.component.html
+++ b/src/app/routes/appointment/appointment.component.html
@@ -66,7 +66,12 @@
 
       <!-- Date Picker -->
       <mat-form-field class="myDatePicker">
-        <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate" >
+        <input
+          matInput
+          [matDatepicker]="picker"
+          [(ngModel)]="selectedDate"
+          (ngModelChange)="onDateChange()"
+        >
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
